moved js imports around to fix - gave map size 500 px

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>San Jose Crime Report</title>
-    <script src="target/scala-2.12/havescourage-fastopt.js"></script>
 </head>
+<style>
+    #map {
+        height: 500px;
+    }
+</style>
 <body>
-
+    <div id="map"></div>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHHshdUODTAqaqtVR1xUrSf10QGl4QdKo"></script>
+    <script src="target/scala-2.12/havescourage-fastopt.js"></script>
 </body>
 </html>
